--- a/miniapp/kubernetes/idgen.yaml
+++ b/miniapp/kubernetes/idgen.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: idgen-app
           resources: 
-          image: devbarbea/idgen
+          image: devbarbea/idgen:1.1
           ports:
             - containerPort: 80
           env:
