--- a/microservices-demo/deploy/kubernetes/ingresser.yaml
+++ b/microservices-demo/deploy/kubernetes/ingresser.yaml
@@ -1,14 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: sockshop-ingress
+  name: socks-frontend-ingress
   namespace: sock-shop
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/load-balancer-name: devops
+    # alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/load-balancer-name: devops-eks
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
-    alb.ingress.kubernetes.io/group.name: blue
+    alb.ingress.kubernetes.io/group.name: purple
     alb.ingress.kubernetes.io/group.order: '1'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:290437845429:certificate/5f64c8a0-2336-4adb-9869-810bd9e28907
 spec:
   ingressClassName: alb
   rules:
@@ -20,5 +23,91 @@ spec:
             backend:
               service:
                 name: front-end
+                port:
+                  number: 80
+    
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: prometheus-ingress
+  namespace: monitoring
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    # alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/load-balancer-name: devops-eks
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/group.name: purple
+    alb.ingress.kubernetes.io/group.order: '3'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:290437845429:certificate/5f64c8a0-2336-4adb-9869-810bd9e28907
+spec:
+  ingressClassName: alb
+  rules:
+    - host: prometheus.devbarbea.me
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: prometheus
+                port:
+                  number: 9090
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: grafana-ingress
+  namespace: monitoring
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    # alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/load-balancer-name: devops-eks
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/group.name: purple
+    alb.ingress.kubernetes.io/group.order: '4'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:290437845429:certificate/5f64c8a0-2336-4adb-9869-810bd9e28907
+spec:
+  ingressClassName: alb
+  rules:
+    - host: grafana.devbarbea.me
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: grafana
+                port:
+                  number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: idapp-ingress
+  namespace: id-gen
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    # alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/load-balancer-name: devops-eks
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/group.name: purple
+    alb.ingress.kubernetes.io/group.order: '5'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:290437845429:certificate/5f64c8a0-2336-4adb-9869-810bd9e28907
+spec:
+  ingressClassName: alb
+  rules:
+    - host: id-app.devbarbea.me
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: node-service
                 port:
                   number: 80
